[package]
name = "samp-rustquest"
version = "0.1.0"
edition = "2021"
authors = ["GalassoX"]
description = "Plugin to make HTTP request in SA:MP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/"}
reqwest = {version = "0.11.13", features = ["blocking", "json"]}
json = "0.12.4"
threadpool = "1.8.1"
log = "0.4.17"
fern = "0.5.7"